--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "arp": {
+    "ARP": {
       "root": "",
       "sourceRoot": "src",
       "projectType": "application",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/arp",
+            "outputPath": "dist/ARP",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -59,18 +59,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "arp:build"
+            "browserTarget": "ARP:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "arp:build:production"
+              "browserTarget": "ARP:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "arp:build"
+            "browserTarget": "ARP:build"
           }
         },
         "test": {
@@ -105,7 +105,7 @@
         }
       }
     },
-    "arp-e2e": {
+    "ARP-e2e": {
       "root": "e2e/",
       "projectType": "application",
       "prefix": "",
@@ -114,11 +114,11 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "arp:serve"
+            "devServerTarget": "ARP:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "arp:serve:production"
+              "devServerTarget": "ARP:serve:production"
             }
           }
         },
@@ -134,5 +134,5 @@
       }
     }
   },
-  "defaultProject": "arp"
+  "defaultProject": "ARP"
 }
